@@ -5,7 +5,7 @@ gmodule-plugins/launcher/main.c
 editor-plugins/prm/maincode.c
 editor-plugins/prm/msgbox.c
 gmodule-plugins/shell/main.c
-editor-plugins/spell/spell.c
+editor-plugins/spell.c
 src/commands.c
 src/dialog.c
 src/gE_about.c
