@@ -1,3 +1,11 @@
+1999-02-04  Chris Lahey  <clahey@umich.edu>
+
+	* launcher/Makefile.am: Changed this to reference gmodule-plugins/
+	instead of plugins/.
+
+	* Makefile.am: Removed some plugins that were repeated in the
+	editor-plugins directory.
+
 1999-02-02  Chris Lahey  <clahey@umich.edu>
 
 	* hello/Makefile.am, ctag/Makefile.am: Replaced plugins with gmodule-plugins in the
