@@ -1,3 +1,8 @@
+1999-02-04  Chris Lahey  <clahey@umich.edu>
+
+	* POTFILES.in: Moved spell from editor-plugins/spell/ to
+	editor-plugins/.
+
 1999-02-03  Chris Lahey  <clahey@umich.edu>
 
 	* POTFILES.in: Replaced plugins with either editor-plugins or
