@@ -1,3 +1,10 @@
+1999-02-04  Chris Lahey  <clahey@umich.edu>
+
+	* makeconfig.pl: Removed some plugins that weren't compiling
+	properly.
+
+	* gedit.spec: Bumped the version number.
+
 1999-02-04  Alex Roberts  <bse@dial.pipex.com>
 
 	* README:
